<resources>
    <string name="app_name">Aatmnirbhar</string>
    <string name="todo">TODO</string>
    <string name="todo01">TODO</string>
    <string name="todo02">TODO</string>
    <string name="todo04">TODO</string>
    <string name="todo06">TODO</string>
    <string name="todo07">TODO</string>
    <string name="buttonlogin">Button</string>
    <string name="sign_in">Sign In</string>
    <string name="todo08">TODO</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="no_account">Don\'t have an account? <b>Sign Up</b></string>
</resources>