<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="707dp"
        android:layout_height="907dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.363"
        app:srcCompat="@drawable/background"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/todo01" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="168dp"
        android:layout_height="177dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112"
        app:srcCompat="@drawable/square"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="241dp"
        android:layout_height="242dp"
        android:contentDescription="@string/todo02"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066"
        app:srcCompat="@drawable/atmalogo"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="264dp"
        android:layout_height="630dp"
        android:contentDescription="@string/todo04"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.688"
        app:srcCompat="@drawable/childlogo" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="356dp"
        android:layout_height="648dp"
        android:contentDescription="@string/todo06"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.681"
        app:srcCompat="@drawable/headline" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="275dp"
        android:layout_height="628dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.675"
        app:srcCompat="@drawable/slogan"
        android:contentDescription="@string/todo07" />


    <Button
        android:id="@+id/signinbutton"
        android:layout_width="228dp"
        android:layout_height="59dp"
        android:background="@drawable/button_sign_in"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.781"
        app:rippleColor="#FFFFFF" />

    <Button
        android:id="@+id/signup"
        android:layout_width="228dp"
        android:layout_height="59dp"
        android:background="@drawable/button_sign_in"
        android:text="Sign up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.895"
        app:rippleColor="#FFFFFF" />

</androidx.constraintlayout.widget.ConstraintLayout>